<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.app3.MainActivity">

    <android.support.v7.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        app:cardBackgroundColor="@color/colorTranslucentBlue"
        app:cardCornerRadius="30dp"
        app:cardElevation="24dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/guideline129"
        app:layout_constraintRight_toLeftOf="@+id/guideline128"
        app:layout_constraintTop_toTopOf="@+id/guideline67"
        app:layout_constraintVertical_bias="1.0">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="Train Your Ears"
                android:textColor="@color/cardview_light_background"
                android:textSize="30sp"
                android:autoSizeTextType="uniform"
                android:autoSizeMinTextSize="15sp"
                android:autoSizeMaxTextSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.493"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="82dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline2"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline3"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.34"
        tools:layout_editor_absoluteY="205dp"
        tools:layout_editor_absoluteX="0dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline4"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.72"
        tools:layout_editor_absoluteY="434dp"
        tools:layout_editor_absoluteX="0dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline180"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.72"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="434dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline183"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.76" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline184"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.86" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline5"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.28"
        tools:layout_editor_absoluteY="169dp"
        tools:layout_editor_absoluteX="0dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline67"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.07" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline127"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.62"
        tools:layout_editor_absoluteY="374dp"
        tools:layout_editor_absoluteX="0dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline126"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.58"
        tools:layout_editor_absoluteY="349dp"
        tools:layout_editor_absoluteX="0dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline125"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.48"
        tools:layout_editor_absoluteY="289dp"
        tools:layout_editor_absoluteX="0dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline124"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.44"
        tools:layout_editor_absoluteY="265dp"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/colorPrimary"
        android:onClick="toPitch"
        android:text="@string/_pitch_"
        android:textColor="@color/cardview_light_background"
        android:textSize="18sp"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="6sp"
        android:autoSizeMaxTextSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline124"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintRight_toLeftOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/colorPrimary"
        android:onClick="toInterval"
        android:text="@string/_interval_"
        android:textColor="@color/cardview_light_background"
        android:textSize="18sp"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="6sp"
        android:autoSizeMaxTextSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline126"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintRight_toLeftOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline125"
        app:layout_constraintVertical_bias="0.499" />

    <Button
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/colorPrimary"
        android:onClick="toChord"
        android:text="@string/_chord_"
        android:textColor="@color/cardview_light_background"
        android:textSize="18sp"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="6sp"
        android:autoSizeMaxTextSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintRight_toLeftOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline127" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline128"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.86"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="354dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline129"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="62dp" />

    <Button
        android:id="@+id/button37"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/colorPrimary"
        android:onClick="toProgression"
        android:text="@string/_progression_"
        android:textColor="@color/cardview_light_background"
        android:textSize="18sp"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="6sp"
        android:autoSizeMaxTextSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline184"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline183" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/cardview_shadow_start_color"
        android:text="@string/_note_"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline184" />

</android.support.constraint.ConstraintLayout>
