<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.app3.PitchActivity">


    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:backgroundTint="@color/colorAccent"
        android:onClick="showAnswer"
        android:tint="@android:color/background_light"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/guideline157"
        app:layout_constraintLeft_toLeftOf="@+id/guideline149"
        app:layout_constraintRight_toLeftOf="@+id/guideline156"
        app:layout_constraintTop_toTopOf="@+id/guideline133"
        app:srcCompat="@android:drawable/ic_menu_compass" />

    <Button
        android:id="@+id/button28"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:backgroundTint="@color/colorAccent"
        android:onClick="mainMenu"
        android:text="@string/_main_menu_"
        android:textColor="@android:color/background_light"
        android:textSize="8sp"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="4sp"
        android:autoSizeMaxTextSize="8sp"
        android:maxLines="2"
        app:layout_constraintBottom_toTopOf="@+id/guideline132"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/guideline149"
        app:layout_constraintRight_toLeftOf="@+id/guideline156"
        app:layout_constraintTop_toTopOf="@+id/guideline157"
        app:layout_constraintVertical_bias="0.0" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline132"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.21" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline133"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline135"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.77" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline136"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.12" />

    <Button
        android:id="@+id/button31"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:onClick="playChordPitch"
        android:text="@string/_play_"
        android:textColor="@color/colorAccent"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="4sp"
        android:autoSizeMaxTextSize="14sp"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@+id/guideline142"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="@+id/guideline146"
        app:layout_constraintRight_toLeftOf="@+id/guideline144"
        app:layout_constraintTop_toTopOf="@+id/guideline141"
        app:layout_constraintVertical_bias="0.798" />

    <Button
        android:id="@+id/button32"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:onClick="submit"
        android:text="@string/_submit_"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="4sp"
        android:autoSizeMaxTextSize="14sp"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@+id/guideline140"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="@+id/guideline146"
        app:layout_constraintRight_toLeftOf="@+id/guideline144"
        app:layout_constraintTop_toTopOf="@+id/guideline143"
        app:layout_constraintVertical_bias="0.495" />

    <com.example.app3.CustomSpinner
        android:id="@+id/spinner3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:background="@color/colorPrimary"
        android:popupBackground="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/guideline137"
        app:layout_constraintHorizontal_bias="0.237"
        app:layout_constraintLeft_toLeftOf="@+id/guideline145"
        app:layout_constraintRight_toLeftOf="@+id/guideline147"
        app:layout_constraintTop_toTopOf="@+id/guideline138"
        app:layout_constraintVertical_bias="0.17" />

    <com.example.app3.CustomSpinner
        android:id="@+id/spinner4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:background="@color/colorPrimary"
        android:popupBackground="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/guideline137"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintLeft_toLeftOf="@+id/guideline148"
        app:layout_constraintRight_toLeftOf="@+id/guideline149"
        app:layout_constraintTop_toTopOf="@+id/guideline138"
        app:layout_constraintVertical_bias="0.168" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline137"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline140"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.87" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline143"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.73" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline142"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.68" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline141"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.54" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline138"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.29" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline144"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.60" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline149"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.84" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline156"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline148"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.55" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline147"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.47" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline146"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.40" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline145"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.18" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorTranslucentDark"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guideline132"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/guideline136"
        app:layout_constraintRight_toLeftOf="@+id/guideline135"
        app:layout_constraintTop_toTopOf="@+id/guideline133"
        app:layout_constraintVertical_bias="1.0">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.08">

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.84">

            <ScrollView
                android:id="@+id/scrollView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.06"></RelativeLayout>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.88">

                        <TextView
                            android:id="@+id/textView11"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.12"
                            android:lineSpacingMultiplier="1.2"
                            android:text="@string/_pitch_rules_"
                            android:textAlignment="center"
                            android:textColor="@color/cardview_light_background"
                            android:textSize="18sp" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.06"></RelativeLayout>

                </LinearLayout>
            </ScrollView>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.08">

        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorTranslucent"
        android:text="TextView"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline140"
        app:layout_constraintVertical_bias="0.47000003" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline157"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.13" />


</android.support.constraint.ConstraintLayout>
